--- a/main.html
+++ b/main.html
@@ -5,12 +5,26 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<table>
+		<thead>
+			<th>Roll number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+			<td>26</td>
+			<td>Onkar</td>
+			</tr>
+			<tr>
+				<td>27</td>
+				<td>Sudhir</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 
 </html>
